--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,26 +1,26 @@
 {
-    "env": {
-        "browser": true,
-        "commonjs": true,
-        "es2021": true
-    },
-    "extends": [
-        "airbnb-base"
-    ],
-    "parserOptions": {
-        "ecmaVersion": 12
-    },
-    "rules": {
-        "linebreak-style": ["error", "unix"], // Enforce LF line endings
-        "no-underscore-dangle": "off", // Disable the no-underscore-dangle rule
-        "class-methods-use-this": "off"
-    },
-    "overrides": [
-        {
-          "files": ["*.test.js"],
-          "rules": {
-            "no-undef": "off"
-          }
-        }
-      ]
+  "env": {
+    "browser": true,
+    "commonjs": true,
+    "es2021": true
+  },
+  "extends": ["airbnb-base", "plugin:prettier/recommended"],
+  "parserOptions": {
+    "ecmaVersion": 12
+  },
+  "plugins": ["prettier"],
+  "rules": {
+    "linebreak-style": ["error", "unix"],
+    "no-underscore-dangle": "off",
+    "class-methods-use-this": "off",
+    "prettier/prettier": "error"
+  },
+  "overrides": [
+    {
+      "files": ["*.test.js"],
+      "rules": {
+        "no-undef": "off"
+      }
+    }
+  ]
 }
